[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zuken"
version = "0.0.3"
authors = [
  { name="Rory" },
]
description = "A small package with functions to help with Zuken (E3) Scripting"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/rory652/Zuken"
Issues = "https://github.com/rory652/Zuken/issues"
